finalização do saida update e criação dos modais de erro

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -124,3 +124,8 @@
 	<modalperfilusuario>
 	</modalperfilusuario>
 </div>
+<!--MODAL HORA INVALIDA-->
+<div class="modal fade" id="horaInvalida" role="dialog">
+	<modalhorainvalida>
+	</modalhorainvalida>
+</div>
