Modais hora invalida e senha invalida adicionados e resolvido problema de horario maior.

--- a/public/partial/modalSenhaAtualizada.html
+++ b/public/partial/modalSenhaAtualizada.html
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
     <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:black;">
         <div class="modal-dialog">
-            <h4 class="modal-title" style="text-align: center">Horário inválido. Por favor, insira um horário maior que {{hora}}.</h4>
+            <h4 class="modal-title" style="text-align: center">Senha atualizada.</h4>
             <button type="button" style="width: 2.5em; height: 2.2em;" class="btn btn-default btn-primary btn-xs close" data-dismiss="modal">
                 <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
             </button>
