--- a/public/views/home.html
+++ b/public/views/home.html
@@ -129,3 +129,8 @@
 	<modalhorainvalida>
 	</modalhorainvalida>
 </div>
+<!--MODAL SENHA ATUALIZADA-->
+<div class="modal fade" id="senhaAtualizada" role="dialog">
+	<modalsenhaatualizada>
+	</modalsenhaatualizada>
+</div>
