icone adicionado, remover usuario feito, começado o editar usuario

--- a/public/partial/modalSenhaAtualizada.html
+++ b/public/partial/modalSenhaAtualizada.html
@@ -1,5 +1,5 @@
 <div class="modal-dialog">
-    <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:black;">
+    <div class="modal-content" style="background-color:#2b669a; border-style: solid; border-color:#2b669a;">
         <div class="modal-dialog">
             <h4 class="modal-title" style="text-align: center">Senha atualizada.</h4>
             <button type="button" style="width: 2.5em; height: 2.2em;" class="btn btn-default btn-primary btn-xs close" data-dismiss="modal">
