--- a/public/views/home.html
+++ b/public/views/home.html
@@ -61,7 +61,7 @@
 				<button ng-click="trocaRota('relatorio')" style="max-width: 5em;" type="button" class=" btn btn-primary btn-default btn-lg">
 					<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
 				</button>
-				<img style="width: 15em;" class="col-md-offset-9 col-md-2" src="../../imagens/logobranco.jpg">
+				<img style="width: 30em;" class="col-md-offset-7 col-md-2" src="../../imagens/CDHicon.png">
 			</div>
 		</div>
 	</div>
@@ -105,8 +105,8 @@
 <!--MODAL SIM-->
 <div id="Sim" class="modal fade" role="dialog">
 	<div class="modal-dialog" >
-		<div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:black;">
-			<div class="modal-header">
+		<div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:#2b669a;">
+			<div class="modal-header" style="background-color: #2b669a">
 				<h4 class="modal-title text-center">Confirmação de saída</h4>
 			</div>
 			<div class="modal-body text-center">
