--- a/public/views/relatorio.html
+++ b/public/views/relatorio.html
@@ -46,7 +46,7 @@
             <button ng-click="trocaRota('entidades')" style="max-width: 5em;" type="button" class=" btn btn-primary btn-default btn-lg">
                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
             </button>
-            <img style="width: 15em;" class="col-md-offset-9 col-md-2" src="../../imagens/logobranco.jpg">
+            <img style="width: 30em;" class="col-md-offset-7 col-md-2" src="../../imagens/CDHicon.png">
         </div>
     </div>
 </div>
