--- a/public/partial/modalAdicionarUsuario.html
+++ b/public/partial/modalAdicionarUsuario.html
@@ -1,9 +1,9 @@
 <div>
     <div class="modal-dialog">
-        <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:black;">
-            <div class="modal-header">
+        <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:#2b669a;">
+            <div class="modal-header" style="background-color: #2b669a">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h2 class="modal-title" style="text-align: center">Adicionar usuário</h2>
+                <h2 class="modal-title" style="text-align: center"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  Adicionar usuário</h2>
             </div>
             <div class="modal-body">
                 <form name="formAddUsuario">
