--- a/public/partial/modalPerfilUsuario.html
+++ b/public/partial/modalPerfilUsuario.html
@@ -1,6 +1,6 @@
 <div class="modal-dialog">
-    <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:black;">
-        <div class="modal-header">
+    <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color: #2b669a">
+        <div class="modal-header" style="background-color: #2b669a">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
             <h2 class="modal-title" style="text-align: center"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Perfil do usuário</h2>
         </div>
@@ -48,8 +48,8 @@
 <!--MODAL ALTERAR SENHA-->
 <div id="alterarSenha" class="modal fade" role="dialog">
     <div class="modal-dialog">
-        <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:black;">
-            <div class="modal-header">
+        <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:#2b669a;">
+            <div class="modal-header" style="background-color: #2b669a">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h2 class="modal-title" style="text-align: center"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span> Alterar senha</h2>
             </div>
@@ -58,7 +58,7 @@
                     <div class="row">
                         <div class="col-md-offset-1 col-md-4">
                             <label>Senha antiga:</label>
-                            <input type="password" class="form-control" ng-model="logado.senhaantiga">
+                            <input type="password" class="form-control" ng-change="validasenhaantiga()" ng-model="logado.senhaantiga">
                         </div>
                     </div>
                     <div class="row">
@@ -70,13 +70,13 @@
                     <div class="row">
                         <div class="col-md-offset-1 col-md-4">
                             <label>Confirma nova senha: </label>
-                            <input type="password" class="form-control" ng-model="logado.novasenha1">
+                            <input type="password" class="form-control" ng-change="validasenhadois()" ng-model="logado.novasenha1">
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-md-offset-1 col-md-4">
-                            <button type="button" class="btn btn-default btn-success" data-dismiss="modal" ng-click="trocasenha()">Confirmar nova senha</button>
+                            <button type="button" class="btn btn-default btn-success" data-dismiss="modal" ng-disabled="!validaantigasenha || !validosenha2" ng-click="trocasenha()">Confirmar nova senha</button>
                         </div>
                     </div>
                 </div>
