--- a/public/views/home.html
+++ b/public/views/home.html
@@ -67,7 +67,7 @@
 	</div>
 </div>
 
-<!--MODAL MYMODAL-->
+<!--MODAL CONFIRMAÇÃO-->
 <div id="myModal" class="modal fade" role="dialog">
 	<div class="modal-dialog" >
 		<div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:black;">
@@ -105,10 +105,7 @@
 <!--MODAL SIM-->
 <div id="Sim" class="modal fade" role="dialog">
 	<div class="modal-dialog" >
-		<div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:#2b669a;">
-			<div class="modal-header" style="background-color: #2b669a">
-				<h4 class="modal-title text-center">Confirmação de saída</h4>
-			</div>
+		<div class="modal-content" style="background-color:green; border-style: solid; border-color:black;">
 			<div class="modal-body text-center">
 				<p>Horário salvo. Até amanhã!
 					<button type="button" style="width: 2.5em; height: 2.2em;" class="btn btn-default btn-primary btn-xs close" data-dismiss="modal">
@@ -133,4 +130,19 @@
 <div class="modal fade" id="senhaAtualizada" role="dialog">
 	<modalsenhaatualizada>
 	</modalsenhaatualizada>
+</div>
+<!--MODAL ALTERAR SENHA-->
+<div class="modal fade" id="alterarSenha" role="dialog">
+	<modalalterarsenha>
+	</modalalterarsenha>
+</div>
+<!--MODAL ERRO UM-->
+<div class="modal fade" id="erroUm" role="dialog">
+	<modalerroum>
+	</modalerroum>
+</div>
+<!--MODAL ERRO DOIS-->
+<div class="modal fade" id="erroDois" role="dialog">
+	<modalerrodois>
+	</modalerrodois>
 </div>
