--- a/public/views/entidades.html
+++ b/public/views/entidades.html
@@ -10,13 +10,7 @@
 			</button>
 			<br>
 			<div class="row">
-				<div class="col-md-3">
-					<div class="input-group col-md-offset-1">
-						<span class="input-group-addon"><span class='glyphicon glyphicon-search'></span></span>
-						<input type="text" class="form-control" ng-model="empresaFiltro.nome">
-					</div>
-				</div>
-				<div class="col-md-offset-3">
+				<div class="col-md-2 col-md-offset-1">
 					<button type="button" class="btn btn-success" data-target="#adicionarUsuario" data-toggle="modal">Adicionar Usuário</button>
 				</div>
 			</div>
