banco de horas finalizado, começo do entrada depois saida.

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -46,7 +46,7 @@
 					<label class="">Banco de horas</label>
 				</div>
 				<div class="col-md-offset-2">
-					<label class="">20:00</label>
+					<label class="">{{bancodehorasmensal}}</label>
 				</div>
 			</div>
 		</div>
