inicio da confirmação, feito no RtcRoot

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -13,7 +13,7 @@
 		<div style="margin-top: 2%;" class="panel panel-primary">
 			<div class="form-group" style="background-color: #e3f2fd;">
 				<div align="left" style="position:absolute">
-					<label class="">Data</label>
+					<label class="">Data:</label>
 				</div>
 				<div class="col-md-offset-2">
 					<label> {{dataEscrita}}</label>
@@ -21,7 +21,7 @@
 			</div>
 			<div class="form-group" style="background-color: #e3f2fd;">
 				<div align="left" style="position:absolute">
-					<label class="">Horário de entrada</label>
+					<label class="">Horário de entrada:</label>
 				</div>
 				<div class="col-md-offset-2">
 					<label class="">{{hora}}</label>
@@ -29,7 +29,7 @@
 			</div>
 			<div class="form-group" style="background-color: #e3f2fd;">
 				<div align="left" style="position:absolute">
-					<label class="">Previsão de saída</label>
+					<label class="">Previsão de saída:</label>
 				</div>
 				<div class="col-md-offset-2" ng-show="saidaregistrada">
 					<label class="">{{horasaida}}</label>
@@ -43,7 +43,7 @@
 			</div>
 			<div class="form-group" style="background-color: #e3f2fd;">
 				<div align="left" style="position:absolute">
-					<label class="">Banco de horas</label>
+					<label class="">Banco de horas mensal:</label>
 				</div>
 				<div class="col-md-offset-2">
 					<label class="">{{bancodehorasmensal}}</label>
