--- a/public/views/relatorio.html
+++ b/public/views/relatorio.html
@@ -33,7 +33,7 @@
                 </button>
             </div>
             <div class="">
-                <button type="button" class="btn btn-default btn-success btn-lg" ng-click="imprimerelatorio()">
+                <button type="button" class="btn btn-default btn-success btn-lg" ng-click="mandarelatorio()">
                     <span class="glyphicon glyphicon-download-alt" aria-hidden="true" ></span>
                 </button>
             </div>
