entrada depois saida finalizado

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -75,7 +75,7 @@
 				<h4 class="modal-title text-center">Confirmação de saída</h4>
 			</div>
 			<div class="modal-body text-center">
-				<div ng-if="!possuinovaprevisao"><p>Você sairá às {{saidashow}}?</p></div>
+				<div ng-if="!possuinovaprevisao"><p>Você sairá às {{horasaida}}?</p></div>
 				<div ng-if="possuinovaprevisao"><p>Você sairá às {{novaprevisaoshow}}?</p></div>
 				<p><button type="button" class="btn btn-default btn-primary" data-toggle="modal" data-target="#Sim" data-dismiss="modal">Sim</button>
 					<button type="button" class="btn btn-default btn-danger" data-toggle="modal" data-target="#Nao" data-dismiss="modal">Não</button></p>
