arrumado horario incompleto, atualizacao de previsao e coloca zero.

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -14,7 +14,7 @@
                     <form name="formDevMan">
                         <div class="form-group" ng-class="{ 'has-error' : false}">
                             <label class="control-label">Email:</label>
-                            <input class="form-control" type="text" placeholder="Digite seu nome" ng-model="usuario.email"/>
+                            <input class="form-control" type="text" placeholder="Digite seu e-mail" ng-model="usuario.email"/>
                             <div ng-show="false" class="alert alert-danger control-label">
                                 <h5>Digite um login correto</h5>
                             </div>
