--- a/public/views/login.html
+++ b/public/views/login.html
@@ -12,14 +12,14 @@
                         <h4>Faça seu login abaixo:</h4>
                     </div>
                     <form name="formDevMan">
-                        <div class="form-group" ng-class="{ 'has-error' : false}">
+                        <div class="form-group" ng-class="{ 'has-error' : !validoEmailCadastrado}">
                             <label class="control-label">Email:</label>
                             <input class="form-control" type="text" placeholder="Digite seu e-mail" ng-model="usuario.email"/>
                             <div ng-show="false" class="alert alert-danger control-label">
                                 <h5>Digite um login correto</h5>
                             </div>
                         </div>
-                        <div class="form-group" ng-class="{ 'has-error' : false}">
+                        <div class="form-group" ng-class="{ 'has-error' : !validoSenha}">
                             <label class="control-label">Senha:</label>
                             <input class="form-control" type="password" placeholder="Digite sua senha" ng-model="usuario.senha"/>
                             <div ng-show="false" class="alert alert-danger control-label">
@@ -28,6 +28,17 @@
                         </div>
                         <div class="form-group">
                             <button class="btn btn-lg btn-primary btn-block" ng-click="logar()">Logar</button>
+                        </div>
+                        <div>
+                            <div ng-show="!validoSenha" class="msg-erro control-label">
+                                <h5>A senha está incorreta!</h5>
+                            </div>
+                            <div ng-show="!validoEmailCadastrado" class="msg-erro control-label">
+                                <h5>E-mail está incorreto!</h5>
+                            </div>
+                            <div ng-show="!validoServer" class="msg-erro control-label">
+                                <h5>Parece que tivemos um problema com o server, tente mais tarde!</h5>
+                            </div>
                         </div>
                     </form>
                 </div>
